--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 </div>
 
              
-                    <div class="col-3 col-md-10 sociallinks text-centers text-white">
+                    <div class="col-3  sociallinks text-centers text-white">
 
                         <h5>Contact With Us</h5>
                         <ul>
